refactor and feat: dynamic typographies and text alignment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Perfect Line Height</title>
   </head>
   <body class="bg-cBackground">
-    <div id="root" class="min-h-screen flex flex-col justify-between"></div>
+    <div id="root" class="h-screen flex flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
